--- a/BookingApi/BookingApi.csproj
+++ b/BookingApi/BookingApi.csproj
@@ -21,5 +21,15 @@
     <ProjectReference Include="..\BookingInfrastructure\BookingInfrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\Images\img1.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
