--- a/BookingCore/BookingCore.csproj
+++ b/BookingCore/BookingCore.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BookingDomain\BookingDomain.csproj" />
+    <ProjectReference Include="..\BookingShared\BookingShared.csproj" />
   </ItemGroup>
 
 </Project>
