--- a/BookingApi/appsettings.Development.json
+++ b/BookingApi/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=BookingApp;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=BookingApp;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "AppSettings": {
     "Token": "Super secret key"
